# controllers/player_total_controller.go
@@ -47,14 +47,14 @@ var totalSortMap = map[string]string{
 // }
 
 // ScrapePlayerTotalStats godoc
+// @ignore
 // @Summary     Scrape player total stats from BR website
 // @Tags        PlayerTotals
 // @Param       season    query  int  true  "Season (e.g. 2025)"
 // @Param       isPlayoff query  bool false "Whether playoffs?"
 // @Success     200       {object} map[string]string
 // @Failure     400,500   {object} map[string]string
-// @Router      /api/playertotals/scrape [get]
-// @ignore
+// //@Router      /api/playertotals/scrape [get]
 func ScrapePlayerTotalStats(db *gorm.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		season := c.QueryInt("season", 0)
