# docs/swagger.json
@@ -98,58 +98,6 @@
                 }
             }
         },
-        "/api/playeradvancedstats/scrape": {
-            "get": {
-                "tags": [
-                    "PlayerStats"
-                ],
-                "summary": "Scrape player advanced stats from BR website",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Season (e.g. 2025)",
-                        "name": "season",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Whether playoffs?",
-                        "name": "isPlayoff",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/playershotchart": {
             "get": {
                 "description": "Returns shot-chart points, optionally filtered by playerId and/or season",
@@ -184,73 +132,6 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/models.PlayerShotChart"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/playershotchart/scrape": {
-            "get": {
-                "description": "Scrapes seasons [startSeason…endSeason] for the given playerId",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "PlayerShotChart"
-                ],
-                "summary": "Scrape a player's shot-chart from BR website",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Player ID (e.g. derozde01)",
-                        "name": "playerId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Start season (e.g. 2024)",
-                        "name": "startSeason",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "End season (e.g. 2021)",
-                        "name": "endSeason",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
                             }
                         }
                     },
@@ -337,58 +218,6 @@
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/playertotals/scrape": {
-            "get": {
-                "tags": [
-                    "PlayerTotals"
-                ],
-                "summary": "Scrape player total stats from BR website",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Season (e.g. 2025)",
-                        "name": "season",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Whether playoffs?",
-                        "name": "isPlayoff",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
                         }
                     },
                     "500": {
